--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-ui": "^2.4.7",
     "iview": "^3.1.3",
     "node-sass": "^4.9.3",
+    "nprogress": "^0.2.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
