--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "countup": "^1.8.2",
+    "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.7",
     "iview": "^3.1.3",
     "node-sass": "^4.9.3",
