--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
     "js-cookie": "^2.2.0",
+    "mavon-editor": "^2.9.1",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
@@ -73,6 +74,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vue-ueditor-wrap": "^2.5.6",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
