--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "cos-js-sdk-v5": "^1.3.5",
     "countup": "^1.8.2",
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.13.0",
@@ -21,6 +22,7 @@
     "node-sass": "^4.9.3",
     "nprogress": "^0.2.0",
     "sass-loader": "^7.1.0",
+    "v-fullpage": "^0.9.2",
     "vue": "^2.5.2",
     "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.0.1",
